Stop side-scrolling on mobile by overriding row margins islandora-repo #297

--- a/css/asu-header-footer.css
+++ b/css/asu-header-footer.css
@@ -5,7 +5,7 @@
 
 /* Note: Unity has xl breakpoint of 1260px and
  * default Bootstrap is 1200px. Set media queries
- * as 1200px until using Unity.
+ * at 1200px until using Unity.
  */
 
 /* Overall styles */
@@ -979,6 +979,19 @@ Footer - Table of Contents
 5. Footer Innovation (#footer-innovation)
 6. Footer Colophon (#footer-colophon)
 -------------------------------------------------------------------*/
+
+/* Fix side-scrolling on mobile. Don't want to
+ * override Bootstrap more than once so setting this
+ * only on mobile. Can remove this if Unity resolves
+ * it at the grid level.
+ */
+/* md breakpoint */
+@media (max-width: 768px) {
+    .block-asu-global-footer .row {
+        margin: 0;
+    }
+}
+
 /*------------------------------------------------------------------
 1. Component Level Mixins
 --------------------------------------------------------------------*/
